# derive_optional

./: .gitignore  .gitmodules  Cargo.toml  Changelog.md  LICENSE-MIT  Readme.md  test.sh  todo.md
.github/workflows/: test.yml
src/: lib.rs
src/sections/: _base.rs  additions.rs  bool_ops.rs  entry_ops.rs  get_contained.rs  iters.rs  misc.rs  querying.rs  ref_adapters.rs  s01_querying.rs  s02_ref_adapters.rs  s03_get_contained.rs  s04_transformers.rs  s05_bool_ops.rs  s05_iters.rs  s06_entry_ops.rs  s07_misc.rs  s99_additions.rs  transformers.rs
tests/: test.rs
tests/fail/: wrong_variants.rs  wrong_variants.stderr
tests/generic/sections/: s01_querying.rs  s02_ref_adapters.rs  s03_get_contained.rs  s04_transformers.rs  s05_bool_ops.rs  s05_iters.rs  s06_entry_ops.rs  s07_misc.rs  s99_additions.rs
tests/specific/sections/: additions.rs  bool_ops.rs  entry_ops.rs  get_contained.rs  iters.rs  misc.rs  ref_adapters.rs  s01_querying.rs  s02_ref_adapters.rs  s04_transformers.rs  s99_additions.rs
